--- a/assets/dbp-educred.html.ejs
+++ b/assets/dbp-educred.html.ejs
@@ -49,13 +49,27 @@
 
         /* TU-Graz style override */
         html {
-            --dbp-override-primary-bg-color: #245b78;
-            --dbp-override-primary-button-border: solid 1px #245b78;
-            --dbp-override-info-bg-color: #245b78;
-            --dbp-override-danger-bg-color: #e4154b;
-            --dbp-override-warning-bg-color: #ffe183;
-            --dbp-override-warning-text-color: black;
-            --dbp-override-success-bg-color: #259207;
+            --dbp-override-background: white;
+            --dbp-override-content: black;
+
+            --dbp-override-primary: #245b78;
+            --dbp-override-secondary: black;
+            --dbp-override-secondary-surface: white;
+            --dbp-override-on-secondary-surface: black;
+            --dbp-override-secondary-surface-border-color: black;
+
+            --dbp-override-muted: #5c5856;
+            --dbp-override-accent: #e4154b;
+            --dbp-override-info: #245b78;
+            --dbp-override-success: #138800;
+            --dbp-override-warning: #af6405;
+            --dbp-override-warning-surface: #ffad4d;
+            --dbp-override-on-warning-surface: black;
+            --dbp-override-danger: #e4154b;
+
+            --dbp-override-border: 1px solid black;
+
+
             --dbp-override-image-nextcloud: url(<%= getUrl('') %>images/nextcloud.svg);
         }
     </style>
@@ -83,65 +97,76 @@
     matomo-site-id="<%= matomoSiteId %>"
     html-overrides="global-override"
 ><dbp-loading-spinner></dbp-loading-spinner>
-<template slot="name">
-    TU Graz<br />
-    <dbp-translated subscribe="lang">
-        <div slot="de">
-            Technische Universität Graz
-        </div>
-        <div slot="en">
-            Graz University of Technology
-        </div>
-    </dbp-translated>
-</template>
-<template slot="title">
-    TU Graz educational credentials
-</template>
-<template slot="logo">
-    <style>
-        #main-logo {
-            padding: 0 50px 0 0;
-        }
-    </style>
-    <dbp-tugraz-logo id="main-logo" subscribe="lang"></dbp-tugraz-logo>
-</template>
-<template slot="footer-links">
-    <style>
-        .footer-links {
-            margin-top: 0.5em;
-        }
 
-        .footer-links a {
-            border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-            padding: 0;
-            margin-left: 1em;
-            transition: background-color 0.15s ease 0s, color 0.15s ease 0s;
-            color: #6c757d;
-            cursor: pointer;
-            text-decoration: none;
-        }
-
-        .footer-links a:hover {
-            color: #fff;
-            background-color: #000;
-        }
-    </style>
-    <dbp-translated subscribe="lang">
-        <div slot="de" class="footer-links">
-            <a target="_blank" rel="noopener" href="https://www.tugraz.at/ueber-diese-seite/datenschutzerklaerung/">Datenschutz</a>
-            <a target="_blank" rel="noopener" href="https://www.tugraz.at/ueber-diese-seite/impressum/">Impressum</a>
-            <a rel="noopener" href="mailto:aktuell-und-offiziell@tugraz.at">Kontakt</a>
-        </div>
-        <div slot="en" class="footer-links">
-            <a target="_blank" rel="noopener" href="https://www.tugraz.at/en/about-this-page/privacy-policy/">Privacy Policy</a>
-            <a target="_blank" rel="noopener" href="https://www.tugraz.at/en/about-this-page/legal-notice/">Legal Notice</a>
-            <a rel="noopener" href="mailto:aktuell-und-offiziell@tugraz.at">Contact</a>
-        </div>
-    </dbp-translated>
-</template>
 </<%= name %>>
 
 <template id="global-override">
+    <template id="<%= name %>">
+        <div slot="name">
+            TU Graz<br />
+            <dbp-translated subscribe="lang">
+                <div slot="de">
+                    Technische Universität Graz
+                </div>
+                <div slot="en">
+                    Graz University of Technology
+                </div>
+            </dbp-translated>
+        </div>
+        <div slot="title">
+            TU Graz educational credentials
+        </div>
+        <div slot="logo">
+            <style>
+                #main-logo {
+                    padding: 0 50px 0 0;
+                }
+            </style>
+            <dbp-tugraz-logo id="main-logo" subscribe="lang"></dbp-tugraz-logo>
+        </div>
+        <div slot="footer-links">
+            <style>
+                .footer-links {
+                    margin-top: 0.5em;
+                }
+
+                .footer-links a {
+                    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+                    padding: 0;
+                    margin-left: 1em;
+                    transition: background-color 0.15s ease 0s, color 0.15s ease 0s;
+                    color: var(--dbp-muted);
+                    cursor: pointer;
+                    text-decoration: none;
+                }
+
+
+                input::-moz-focus-inner { border: 0; }
+
+                :focus-visible{
+                    outline:none !important;
+                    outline-width: 0 !important;
+                    box-shadow: none;
+                    -moz-box-shadow: none;
+                    -webkit-box-shadow: none;
+                    box-shadow: 0px 0px 4px 2px var(--dbp-accent);
+                }
+
+            </style>
+            <dbp-translated subscribe="lang">
+                <div slot="de" class="footer-links">
+                    <a target="_blank" rel="noopener" href="https://www.tugraz.at/ueber-diese-seite/datenschutzerklaerung/">Datenschutz</a>
+                    <a target="_blank" rel="noopener" href="https://www.tugraz.at/ueber-diese-seite/impressum/">Impressum</a>
+                    <a rel="noopener" href="mailto:aktuell-und-offiziell@tugraz.at">Kontakt</a>
+                </div>
+                <div slot="en" class="footer-links">
+                    <a target="_blank" rel="noopener" href="https://www.tugraz.at/en/about-this-page/privacy-policy/">Privacy Policy</a>
+                    <a target="_blank" rel="noopener" href="https://www.tugraz.at/en/about-this-page/legal-notice/">Legal Notice</a>
+                    <a rel="noopener" href="mailto:aktuell-und-offiziell@tugraz.at">Contact</a>
+                </div>
+            </dbp-translated>
+        </div>
+    </template>
     <template id="dbp-acquire-3g-ticket">
         <div slot="description">
             <dbp-translated subscribe="lang">
