--- a/assets/dbp-educred.html.ejs
+++ b/assets/dbp-educred.html.ejs
@@ -50,7 +50,7 @@
         }
 
         /* TU-Graz style override */
-        html {
+        .light-theme {
             --dbp-override-background: white;
             --dbp-override-content: black;
 
@@ -66,11 +66,11 @@
             --dbp-override-success: #138800;
             --dbp-override-warning: #af6405;
             --dbp-override-warning-surface: #ffad4d;
+            --dbp-override-warning-surface-border-color: #ffad4d;
             --dbp-override-on-warning-surface: black;
             --dbp-override-danger: #e4154b;
 
             --dbp-override-border: 1px solid black;
-
 
             --dbp-override-image-nextcloud: url(<%= getUrl('') %>images/nextcloud.svg);
         }
@@ -98,6 +98,7 @@
     matomo-url="<%= matomoUrl %>"
     matomo-site-id="<%= matomoSiteId %>"
     html-overrides="global-override"
+    themes='[{"class": "light-theme", "icon": "sun", "name": "Light Mode"}]'
 ><tug-spinner id='spinner'></tug-spinner>
 
 </<%= name %>>
